# mumlib

./: .gitignore  CMakeLists.txt  Mumble.pb-msys.cc  Mumble.pb-msys.h  README.md  mumble.proto  mumlib.usp  mumlib_example.cpp
include/: mumlib.hpp
include/mumlib/: Audio.hpp  Callback.hpp  CryptState.hpp  Transport.hpp  VarInt.hpp  enums.hpp
src/: Audio.cpp  Callback.cpp  CryptState.cpp  Transport.cpp  VarInt.cpp  mumlib.cpp
